<resources>
    <string name="app_name">DevOps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="market_place_text">Market Place</string>
    <string name="gallery_text">Gallery</string>
    <string name="young_art_text">Young Art</string>
    <string name="content_desciption_frame">frame</string>

    <string name="com_auth0_client_id">fFPxEdQJbyPirdQcuzrSNuYiz7tp8nLL</string>
    <string name="com_auth0_domain">dev-g6aj--a8.us.auth0.com</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="presentation_text">Hello!</string>
    <string name="log_in_sign_in">Log in / Sign in</string>
    <string name="hello_text">Hello!</string>
    <string name="shopping_cart_text">Shopping Cart</string>
    <string name="trends_text">Trends</string>
    <string name="bestselling_artist_text">Bestselling Artist</string>
    <string name="sponsored_text">Sponsored</string>
    <string name="auctions_text">Auctions</string>
    <string name="open_text">Open</string>
    <string name="popular_text">Popular</string>
    <string name="upload_text">Upload</string>
    <string name="checkout_text">Checkout</string>
    <string name="title_text">Title</string>
    <string name="artist_name_text">Artist name</string>
    <string name="price_text">Price</string>
    <string name="description_text">Description</string>
    <string name="add_to_cart_text">Add to cart</string>
    <string name="time_text">Time</string>
    <string name="profile">Profile</string>
    <string name="wooden_candle_holders">Wooden Candle Holders</string>
    <string name="theobold_miller">Theobold Miller</string>
    <string name="wooden_apple">Wooden Apple</string>
    <string name="rosemary_kain">Rosemary Kain</string>
    <string name="wooden_clown">Wooden Clown</string>
    <string name="tabitha_gilbert">Tabitha Gilbert</string>
    <string name="bin">Bin</string>
    <string name="my_cart">My Cart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="hello_username">Hello, %1s</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="you_need_to_sign_in_log_in">You need to Sign In \\ Log In</string>
    <string name="search_for_art">Search for Art</string>
</resources>