<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailViewFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="6dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/detail_view_title_text"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text" />

    <TextView
        android:id="@+id/detail_view_artist_text"
        style="@style/Normal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist_name_text" />

    <TextView
        android:id="@+id/detail_view_price_text"
        style="@style/Normal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_text" />

    <TextView
        android:id="@+id/detail_view_description_text"
        style="@style/Normal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_text" />

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_to_cart_text"
        android:textColor="#5E35B1" />
</LinearLayout>