<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    tools:context=".fragments.GalleryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="414dp"
        android:layout_height="670dp"
        android:layout_marginTop="18dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo1"
                android:layout_width="match_parent"
                android:layout_height="344dp"
                android:contentDescription="@string/content_desciption_frame"
                android:src="@drawable/foto2" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/wooden_candle_holders" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/theobold_miller" />

            <ImageView
                android:id="@+id/photo2"
                android:layout_width="match_parent"
                android:layout_height="359dp"
                android:src="@drawable/foto3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/wooden_apple" />

            <TextView
                android:id="@+id/textView5"
                style="@style/Normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/rosemary_kain" />

            <ImageView
                android:id="@+id/photo3"
                android:layout_width="match_parent"
                android:layout_height="261dp"
                android:src="@drawable/foto1" />

            <TextView
                android:id="@+id/textView6"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/wooden_clown" />

            <TextView
                android:id="@+id/textView7"
                style="@style/Normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tabitha_gilbert" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

</androidx.constraintlayout.widget.ConstraintLayout>