<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.example.devops.domain.Product" />
        <variable
            name="clickListener"
            type="com.example.devops.screens.shoppingcart.ProductListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="182dp"
            android:layout_height="147dp"
            android:contentDescription="@string/content_desciption_frame"
            app:imageUrl="@{product.productImgPath}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="224dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/product_title"
                style="@style/Title"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="10dp"
                android:text="@{product.productName}" />

            <TextView
                android:id="@+id/product_artist"
                style="@style/Normal_text"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rosemary_kain" />

            <TextView
                android:id="@+id/product_price"
                style="@style/Normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="" />

            <ImageButton
                android:id="@+id/product_delete"
                android:layout_width="129dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom|end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/bin"
                android:padding="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bin"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
                android:onClick="@{()->clickListener.onClick(product)}"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>