<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.youngart.YoungArtFragment"
    android:background="@drawable/fondo_young_art">

    <androidx.core.widget.NestedScrollView
        android:layout_width="414dp"
        android:layout_height="670dp"
        android:layout_marginTop="18dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picture_market_place"
                android:layout_width="262dp"
                android:layout_height="348dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/content_desciption_frame"
                android:hapticFeedbackEnabled="false"
                android:src="@drawable/gold" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_text" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/artist_name_text" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="341dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/content_desciption_frame"
                android:hapticFeedbackEnabled="false"
                android:src="@drawable/gold" />

            <TextView
                android:id="@+id/textView4"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_text" />

            <TextView
                android:id="@+id/textView5"
                style="@style/Normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/artist_name_text" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="341dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/content_desciption_frame"
                android:hapticFeedbackEnabled="false"
                android:src="@drawable/gold" />

            <TextView
                android:id="@+id/product_artist"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_text" />

            <TextView
                android:id="@+id/textView7"
                style="@style/Normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/artist_name_text" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

</FrameLayout>